@@ -2,7 +2,8 @@ Nutch Change Log
 
 Unreleased changes (0.8.2)
 
- 1.
+ 1. NUTCH-391 ParseUtil logs file contents to log file when it
+    cannot find parser (siren)
 
 Release 0.8.1 - 2006-09-24
 
